2006-11-26  Ville Vainio  <vivainio@gmail.com>

	* Remove ipconfig and %config; you should use _ip.options structure
	directly instead!
	
	* genutils.py: add wrap_deprecated function for deprecating callables
	
	* iplib.py: deprecate ipmagic, ipsystem, ipalias. Use _ip.magic and
	_ip.system instead. ipalias is redundant.
	
	* Magic.py: %rehashdir no longer aliases 'cmdname' to 'cmdname.exe' on 
	win32, but just 'cmdname'. Other extensions (non-'exe') are still made 
	explicit.

	* ipy_stock_completers.py: 'hg' (mercurial VCS) now has a custom 
	completer. Try it by entering 'hg ' and pressing tab.

	* macro.py: Give Macro a useful __repr__ method
	
	* Magic.py: %whos abbreviates the typename of Macro for brevity.
	
2006-11-24  Walter Doerwald  <walter@livinglogic.de>
	* IPython/Extensions/astyle.py: Do a relative import of ipipe, so that
	we don't get a duplicate ipipe module, where registration of the xrepr
	implementation for Text is useless.

	* IPython/Extensions/ipipe.py: Fix __xrepr__() implementation for ils.

	* IPython/Extensions/ibrowse.py: Fix keymapping for the enter command.

2006-11-24  Ville Vainio  <vivainio@gmail.com>

	* Magic.py, manual_base.lyx: Kirill Smelkov patch: 
	try to use "cProfile" instead of the slower pure python
	"profile"

2006-11-23  Ville Vainio  <vivainio@gmail.com>

	* manual_base.lyx: Kirill Smelkov patch: Fix wrong 
	Qt+IPython+Designer link in documentation.
	
	* Extensions/ipy_pydb.py: R. Bernstein's patch for passing 
	correct Pdb object to %pydb.


2006-11-22  Walter Doerwald  <walter@livinglogic.de>
	* IPython/Extensions/astyle.py: Text needs it's own implemenation of the
	generic xrepr(), otherwise the list implementation would kick in.

2006-11-21  Ville Vainio  <vivainio@gmail.com>

	* upgrade_dir.py: Now actually overwrites a nonmodified user file
	with one from UserConfig.
	
	* ipy_profile_sh.py: Add dummy "depth" to var_expand lambda, 
	it was missing which broke the sh profile.
	